2004-07-26  Richard Sandiford  <rsandifo@redhat.com>

	PR rtl-optimization/16643
	* cfglayout.h (cfg_layout_initialize): Add a flags parameter.
	* cfglayout.c (cfg_layout_initialize): Pass it to cleanup_cfg.
	* basic-block.h (reorder_basic_blocks): Add a flags parameter.
	* cfglayout.c (reorder_basic_blocks): Pass it to cfg_layout_initialize.
	(partition_hot_cold_basic_blocks): Pass 0 to cfg_layout_initialize.
	* function.c (thread_prologue_and_epilogue_insns): Likewise.
	* rtl.h (tracer): Add a flags parameter.
	* tracer.c (tracer): Pass it to cfg_layout_initialise.
	* passes.c (rest_of_handle_stack_regs): Pass 0 to reorder_basic_blocks.
	(rest_of_handle_reorder_blocks): Update calls to tracer and
	reorder_basic_blocks, passing CLEANUP_UPDATE_LIFE if appropriate.
	(rest_of_handle_tracer): Pass 0 to tracer.
	(rest_of_handle_loop2): Pass 0 to cfg_layout_initialize.

2004-07-25  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (movdi_internal64): Further disparage
	f->f.

2004-07-24  Nathan Sidwell  <nathan@codesourcery.com>

	* tree.h (BINFO_BASE_ACCESSES): Accesses are a VEC(tree).
	(BINFO_BASE_ACCESS): Adjust.
	(BINFO_BASE_ACCESS_APPEND): New.
	(struct tree_binfo): Make base_accesses a VEC(tree) pointer.
	* dbxout.c (dbxout_type): Adjust binfo access accessing.
	* dwarf2out.c (gen_member_die): Likewise.
	* tree-dump.c (deque_and_dump): Likewise.

2004-07-26  Falk Hueffner  <falk@debian.org>

	* config/alpha/alpha.c (alpha_rtx_cost_data): Tweak int_div
	costs.

2004-07-25  Roger Sayle  <roger@eyesopen.com>

	* config/i386/i386.c (output_fp_compare): Use ffreep to pop top
	value off of the stack if TARGET_USE_FFREEP.

2004-07-26  Bernardo Innocenti  <bernie@develer.com>

	* gengtype.c (oprintf): Replace xrealloc () with XRESIZEVEC ().
	* gengtype-yacc.y: Likewise.  Replace free() with XDELETE ().
	* c-typeck.c (PUSH_SPELLING): Remove redundant NULL-pointer
	check on invocation of XRESIZEVEC ().

2004-07-26  Bernardo Innocenti  <bernie@develer.com>
